[metadata]
name = tably
version = 0.1.0
author = Tably
author_email = support@tably.com
description = Tably <> Python connector
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tablyinc/tably-python
project_urls =
    Bug Tracker = https://github.com/tablyinc/tably-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
